--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Socket.io Client</title>
-  <script src="/socket.io/socket.io.js"></script>
-</head>
-<body>
-  <h1>WebSocket Client</h1>
-  <script>
-    var socket = io("http://localhost:3000");
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Socket.IO Chat</title>
+        <style>
+            body {margin: 0; padding-bottom: 3rem; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
+           
+            #form  { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
+            #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
+            #input:focus { outline:#813737; }
+            #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
 
-    socket.emit('message', 'hola from js client');
-
-    socket.on('message', function(msg){
-      console.log(msg);
-    });
-  </script>
-</body>
+            #messages { list-style-type: none; margin: 0; padding: 0; }
+            #messages > li { padding: 0.5rem 1rem; }
+            #message > li:nth-child(odd) { background: #813737; }
+        </style>
+    </head>
+    <body>
+        <ul id="messages"> </ul>
+        <form id="form" action="">
+            <input id="input" autocomplete="off" /><button>Send</button>
+        </form>
+    </body>
 </html>
