--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
 
         <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
         <script>
+            let counter = 0;
+
             const socket = io({
                 auth:{
                     serverOffset: 0
-                }
+                },
+                // enable retries
+                ackTimeout: 10000,
+                retries: 3,
             });
 
             const form = document.getElementById("form");
@@ -38,7 +43,9 @@
             form.addEventListener('submit', (e) => {
                 e.preventDefault();
                 if (input.value){
-                    socket.emit('chat message', input.value);
+                    // comupte a unique offset
+                    const clientOffset = `${socket.id}-${counter++}`;
+                    socket.emit('chat message', input.value,clientOffset);
                     input.value = '';
                 }
             });
